app/components/Sections/ReferralsSection/ReferralsSection.module.css
/* .referrals_container__wrapper {
  background-color: black;
  display: flex;
  flex-direction: column;
  height: 100vh;
  justify-content: space-between;
  width: 850px;
} */

.referral_group {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
}

.referral_single:first-of-type {
  align-items: center;
  display: flex;
  flex-direction: row-reverse;
  flex-grow: 1;
  width: 100%;
}

.referral_single:nth-of-type(2) {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  width: 100%;
}

.another_random_lady {
  border-radius: 8rem;
}
.random_lady {
  border-radius: 8rem;
}

